--- a/styles/album.css
+++ b/styles/album.css
@@ -49,6 +49,7 @@
  
  .song-item-number {
      width: 5%;
+     min-width: 30px;  /* Make sure the Play button fits in the song number column to avoid the visual distraction of dynamically resizing during a hover event */
  }
  
  .song-item-title {
@@ -59,6 +60,28 @@
      width: 5%;
  }
 
+.album-song-button {
+    text-align: center;
+    font-size: 14px;
+    background-color: white;
+    color: rgb(210, 40, 123);
+    border-radius: 50% 50%;
+    display: inline-block;
+    width: 28px;
+    height: 28px;
+}
+
+.album-song-button:hover {
+    cursor: pointer;
+    color: white;
+    background-color: rgb(210, 40, 123);
+}
+
+.album-song-button span {
+    line-height: 28px;
+}
+
+/* Centered text looks better on smaller devices */
  @media (max-width: 640px) and (min-width: 320px) {
      .album-view-details {
          text-align: center;
